# den

./: .gitignore  AGENTS.md  CLAUDE.MD  CLAUDE.md  README.md  build_binary.sh  den.spec  install.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: install-opencode.sh
.kiro/specs/brew-backup/: design.md  requirements.md  tasks.md
.kiro/specs/den-cli/: tasks.md
.kiro/specs/executable-packaging/: design.md  requirements.md  tasks.md
.kiro/specs/keychain-storage/: tasks.md  traceDb.md
.kiro/specs/launchctl-helper/: design.md  requirements.md  tasks.md
.kiro/specs/plist-environment-variables/: design.md  requirements.md  tasks.md
openspec/specs/auth-login/: design.md  spec.md
openspec/specs/brew-backup/: design.md  spec.md
openspec/specs/cli-commands/: spec.md
src/den/: __init__.py  __main__.py  auth_migration.py  auth_storage.py  brew_logger.py  brew_runner.py  brewfile_formatter.py  gist_client.py  hash_utils.py  keychain_backend.py  launchctl_config.py  launchctl_runner.py  launchctl_validator.py  main.py  plist_generator.py  plist_scanner.py  state_storage.py
src/denctl/: __init__.py  main.py
tests/: test_auth.py  test_auth_command.py  test_auth_properties.py  test_auth_storage.py  test_brew_command.py  test_brew_logger.py  test_brew_runner.py  test_brewfile_formatter.py  test_gist_client.py  test_hash_utils.py  test_hello.py  test_homebrew.py  test_launchctl_config.py  test_launchctl_properties.py  test_launchctl_runner.py  test_main.py  test_plist_generator.py  test_properties.py  test_state_storage.py
(+16 files in other folders)
