[project]
name = "den"
version = "0.1.0"
description = "A CLI utility for local machine automations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
den = "den.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/den"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
